# emu_manipulator

./: .gitignore  LICENSE  README.md  cd  ersPREDATORcd Desktop
emu_core/: CMakeLists.txt  package.xml
emu_core/launch/: core.launch
emu_core/scripts/: LeftTray  core.py  core.py.save  core.py.save.1  embedded_talker.py  (+8 more)
emu_description/: CMakeLists.txt  package.xml
emu_gazebo/: CMakeLists.txt  package.xml
emu_planner/: .setup_assistant  CMakeLists.txt  package.xml
emu_planner/config/: emu.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
emu_planner/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  emu_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planner.launch  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  visualize.launch  warehouse.launch
emu_planner/meshes/: bin_green.dae  bin_yellow.dae
emu_planner/scripts/: collisionCheck.py  main_planner.py  module_scene.py  planner.py  test_plan.py  testepsrv.py  trash_demo.py  try_share.py
emu_planner/scripts/moveit_mod/: planning_scene_interface.py
emu_planner/srv/: EmuPlanner.srv
emu_share/: CMakeLists.txt  package.xml
emulator_bridge/: CMakeLists.txt  package.xml
simulink_interface/: emuSim.slx  emuSim2019.slx  emuSim2019.slxc
(+403 files in other folders)
